# readme-ai

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  run_tests.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
readme_ai/: __init__.py  analyzer.py  badges.py  builder.py  cli.py  sampler.py
readme_ai/llm/: __init__.py  anthropic.py  base.py  ollama.py  openai.py
tests/: test_readme_ai.py
