[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "readme-ai-cli"
version = "0.1.0"
description = "Generate beautiful READMEs from your actual code, not templates"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [{ name = "Your Name", email = "you@example.com" }]
keywords = ["readme", "ai", "documentation", "cli", "openai", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Documentation",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "httpx>=0.25.0",
    "gitpython>=3.1.40",
    "toml>=0.10.2",
    "jinja2>=3.1.2",
    "pathspec>=0.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
readme-ai = "readme_ai.cli:app"

[project.urls]
Homepage = "https://github.com/surfruit/readme-ai"
Repository = "https://github.com/surfruit/readme-ai"
Issues = "https://github.com/surfruit/readme-ai/issues"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501", "I001"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["readme_ai"]
omit = ["tests/*"]

[tool.hatch.build.targets.wheel]
packages = ["readme_ai"]